# shopkeep

./: .gitignore  Cargo.toml  LICENSE  README.md  shopkeep.toml
.cargo/: config.toml
core/: Cargo.toml
core/src/: lib.rs
doc/: header.html  style.css
example/api-client/: Cargo.toml  README.md
example/api-client/src/: main.rs
examples/: server.rs
src/: api.rs  config.rs  error.rs  extension.rs  handler.rs  lib.rs  main.rs  registry.rs  types.rs
src/api/: extensions.rs  health.rs
src/registry/: fs.rs
