[package]
name = "shopkeep"
version = "0.1.0"
edition = "2021"
description = "HTTP server for the emporium extension marketplace"
license = "MIT"

[workspace]
members = ["example/api-client"]

[dependencies]
# HTTP server
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
http-body-util = "0.1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Versioning and dates
semver = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Package handling
bytes = "1"
flate2 = "1"
tar = "0.4"

# Checksums
sha2 = "0.10"
hex = "0.4"

# Utilities
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
matchit = "0.8"
