[package]
name = "shopkeep"
version = "0.1.0"
edition = "2024"
description = "Extension registry module for runway"
license = "MIT"

[lib]
path = "src/lib.rs"

[[example]]
name = "server"
path = "examples/server.rs"

[dependencies]
# Server framework
runway = { path = "../runway" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

# Versioning and dates
semver = { version = "1", features = ["serde"] }
jiff = { version = "0.2", features = ["serde"] }

# Package handling
bytes = "1"
flate2 = "1"
tar = "0.4"

# Checksums
sha2 = "0.10"
hex = "0.4"

# Utilities
async-trait = "0.1"
thiserror = "2"

[dev-dependencies]
# For server example
clap = { version = "4", features = ["derive"] }
toml = "0.8"
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
