[package]
name = "shopkeep_core"
version = "0.1.0"
edition = "2021"
description = "Core types for the shopkeep extension registry"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = { version = "1", features = ["serde"] }
jiff = { version = "0.2", features = ["serde"] }
