[package]
name = "api-client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jiff = { version = "0.2", features = ["serde"] }
semver = { version = "1", features = ["serde"] }
